# MyAlgorithms

./: CMakeLists.txt  main.cpp
MyAlgorithms/: CMakeLists.txt
MyAlgorithms/MySort/: CMakeLists.txt  sort.h
Testing/: CMakeLists.txt  testSorting.cpp
